# shortlist

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  SHORTLIST_SPEC.md  SPEC.md  chainlit.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.chainlit/: config.toml
.claude/commands/: create_branch.md  create_issue.md  create_pr.md
.github/workflows/: ci.yml  claude.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_chainlit_tables.py
app/: __init__.py
app/agents/: __init__.py  advise.py  agent.py  intake.py  research.py  research_enricher.py  research_explorer.py  research_table.py  router.py  workflow.py
app/agents/prompts/: agent.yaml  explorer.yaml  field_generation.yaml  intake.yaml  search_strategy.yaml
app/api/: __init__.py
app/auth/: __init__.py  oauth.py  password_auth.py
app/chat/: __init__.py  citations.py  handlers.py  hitl_actions.py  starters.py  table_rendering.py
app/config/: settings.py
app/data/: product_categories.yaml
app/models/: __init__.py  state.py
app/models/schemas/: __init__.py  base.py  shortlist.py
app/services/: __init__.py  field_generation.py  knowledge.py  lattice.py  llm.py  openai_enrichment_chain.py  search_strategy.py  table_rendering.py
app/utils/: __init__.py  hitl.py  logger.py  retry.py  sanitization.py
docs/: CODE_REVIEW.md  index.md
docs/architecture/: code-reference.md  decisions.md  langgraph-workflow.md  overview.md  shortlist.md
docs/deployment/: aws-infrastructure.md  ci-cd.md
docs/development/: getting-started.md  github-standards.md  local-setup.md  testing.md
infrastructure/: README.md
infrastructure/environments/production/: main.tf  terraform.tfvars.example
infrastructure/environments/staging/: outputs.tf  variables.tf
infrastructure/modules/ecs-fargate/: main.tf
infrastructure/modules/vpc/: main.tf  variables.tf
infrastructure/shared/: backend.tf
knowledgebase/: README.md
knowledgebase/scripts/: sync_vectorstore.py
public/: custom.css  custom.js  theme.json
public/elements/: ProductTable.jsx
scripts/: localstack-init.sh  rds-tunnel.sh
tests/: conftest.py
tests/agents/: test_router.py  test_workflow.py
tests/chat/: test_handlers.py
tests/models/: test_shortlist.py  test_state.py
tests/services/: test_field_generation.py  test_lattice.py  test_llm.py
