[project]
name = "agent-template"
version = "0.1.0"
description = "Multi-agent conversational system template using Chainlit and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",

    # Chat interface
    "chainlit>=2.8.3",

    # LLM & Agent framework
    "langgraph>=0.6.10",
    "langchain-core>=0.3.79",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.0",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Database
    "asyncpg>=0.30.0",
    "alembic>=1.17.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.1.0",

    # Cloud storage
    "boto3>=1.38.0",
    "aiofiles>=24.1.0",

    # Utilities
    "openai>=2.3.0",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "pandas>=2.0.0",
    "tenacity>=8.2.0,<9.0.0",

    # Lattice enrichment (git submodule - installed via uv pip install -e)
    # Run: uv pip install -e ./vendor/lattice
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",

    # Linting & formatting
    "ruff>=0.11.0",

    # Documentation
    "mkdocs-material>=9.6.0",

    # Development utilities
    "python-dotenv>=1.0.0",
    "ipython>=8.32.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["vendor*", "tests*", "infrastructure*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
